src/styles/markdown.css
#markdown h2 {
  @apply text-2xl font-bold;
  @apply mt-4;
}

#markdown a {
  @apply text-blue-500;
}

#markdown p {
  /* Spacing between */
  @apply mt-1;
}

#markdown h3 {
  /* Distinguish from normal text */
  @apply text-xl font-semibold;
  @apply mt-1;
}

@screen md {
  #markdown pre {
    /* Slight more padding than the rest of text */
    @apply mx-8;
  }
}
#markdown blockquote {
  /* Can't distinguish */
  @apply ml-1;
  @apply border-solid border-l-2 pl-2 border-gray-900;
  @apply italic;
}

#markdown ul {
  @apply list-disc list-inside;
}

#markdown ol {
  @apply list-decimal list-inside;
}

#markdown code {
  @apply whitespace-pre-wrap;
  @apply font-mono;
}

